# octh

./: .gitignore  Cargo.toml  Create-Header.ps1  Run-Bindgen.ps1  __bindgen.ii  bindgen-bug-1025.sh  bindgen-bug-1028.sh  bindgen-octh-27.sh  bindgen.h  bindgen2.h  build.ps1  build.rs  build.sh  predicate.sh  readme.md  strip-comments.sh
.github/workflows/: ci.yml
example-helloworld/: Cargo.toml  build.rs  readme.md
example-helloworld/src/: lib.rs
issue/: octh15.sh  octh36.sh  octh38.sh
octh/: Cargo.toml  build.rs
octh/src/: bindings.rs  lib.rs  octhelp.cc  octhelp.h
src/: lib.rs  octhc.cc  octhc.h  octhelp.cc  octhelp.h
tests/: helloworld.rs
